--- a/Simple_responsive_webpage/intrn_test_1.html
+++ b/Simple_responsive_webpage/intrn_test_1.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>intn_1_test</title>
-<link rel="stylesheet" type="text/css"  href="style.css" >
+<link rel="stylesheet" type="text/css"  href="css/style.css" >
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -17,7 +17,7 @@
 			<picture>
   				<source media="(max-width: 1024px)" srcset="rsz_1rsz_dream1.jpg">
   				<!--<source media="(max-width: 375px)" srcset="img_white_flower.jpg">-->
-  				<img id="mainimg" src="rsz_dream1.jpg" alt="main_piture">
+  				<img id="mainimg" src="images/rsz_dream1.jpg" alt="main_piture">
 			</picture>
 		</div>
 	</header>
@@ -43,19 +43,19 @@
 			<div class="populr">
 				<div class="image">
 					<h3>Delhi</h3>
-					<a href="#" title="Hotels in Delhi"><img class="imgsize" src="delhi1.jpg" alt="delhi_picture" ></a>
+					<a href="#" title="Hotels in Delhi"><img class="imgsize" src="images/delhi1.jpg" alt="delhi_picture" ></a>
 				</div>
 				<div class="image">
 					<h3>Chennai</h3>
-					<a href="#" title="Hotels in Chennai"><img class="imgsize" src="chennai.jpg" alt="delhi_picture"></a>
+					<a href="#" title="Hotels in Chennai"><img class="imgsize" src="images/chennai.jpg" alt="delhi_picture"></a>
 				</div>
 				<div class="image">
 					<h3>Bangalore</h3>
-					<a href="#" title="Hotels in Bangalore"><img class="imgsize" src="bangalore.jpg" alt="delhi_picture"></a>
+					<a href="#" title="Hotels in Bangalore"><img class="imgsize" src="images/bangalore.jpg" alt="delhi_picture"></a>
 				</div>
 				<div class="image">
 					<h3>Mumbai</h3>
-					<a href="#" title="Hotels in Bangalore"><img class="imgsize" src="mumbai.jpg" alt="Mumbai_picture"></a>
+					<a href="#" title="Hotels in Bangalore"><img class="imgsize" src="images/mumbai.jpg" alt="Mumbai_picture"></a>
 				</div>
 	
 			</div>
@@ -119,7 +119,7 @@
 			</div>
 			
 			<div class="column">
-				<img src="hotel.jpg" alt="hotel_picture" width="538" height="305" class="round" >
+				<img src="images/hotel.jpg" alt="hotel_picture" width="538" height="305" class="round" >
 			</div>
 		</div>
 	</section>
